--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -16,14 +16,14 @@ import logo from '../assets/logo_450x200_azul_trans.png'
 <style>
     header {
         width: 80vw;
-        margin: 0 auto;
+        margin: 30px auto;
 
         position: sticky;
         top: 0;
         z-index: 10;
     }
     nav {
-        margin: 10px 0;
+        /* margin: 30px 0; */
         width: 100%;
         height: 50px;
         display: flex;
