--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -60,18 +60,31 @@ const skillsArr = [
     section {
         height: 100vh;
         width: 100vw;
-        background-color: rgba(212, 167, 255, 0.164);
+        background-color: #f2f2f2;
+        display: flex;
+        align-items: center;
+        
     }
     .skillsSet {
         width: 60%;
+        background-color: rgba(255, 255, 255, 0.637);
 
         margin: 0 auto;
+        padding: 0 60px 60px 60px;
+        box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.20);
+        border-radius: 20px;
+
+
     }
     .skillsGroup {
         width: 100%;
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: 1fr;
-        gap: 3rem;
+        justify-items: center;
+        gap: 2rem;
+    }
+    h2{
+        font-size: 50px;
     }
 </style>
