config responsive desing hero, about, constact, projects, skill... 404 page added

--- a/src/components/LogoIcon.astro
+++ b/src/components/LogoIcon.astro
@@ -2,60 +2,52 @@
 export interface Props {
     title: string;
     image: string;
-    
 }
 const { title, image } = Astro.props;
-const nameTitle = title
+const nameTitle = title;
 ---
- 
+
 <article class={`Card${nameTitle}`}>
     <img class={`CardLogo${nameTitle}`} src={image} alt="logo" />
     <p class={`CardTitle${nameTitle}`}>{title}</p>
 </article>
- 
 
+<script define:vars={{ nameTitle }}>
+const card = document.querySelector(`article.Card${nameTitle}`);
+const logo = document.querySelector(`img.CardLogo${nameTitle}`);
+const title = document.querySelector(`p.CardTitle${nameTitle}`);
 
-<script define:vars={{nameTitle}}>
+card?.addEventListener("mouseenter", function () {
+    // Acciones a realizar cuando el cursor entra en el elemento (evento onHover)
+    // console.log("El cursor ha entrado en el elemento.");
+    if (card) {
+        card.style.border = "3px dashed white";
+    }
+    if (logo) {
+        logo.style.filter = "blur(3px)";
+        logo.style.width = "40%";
+        logo.style.height = "40%";
+    }
+    if (title) {
+        title.style.display = "block";
+    }
+});
 
-     
-    const card = document.querySelector(`article.Card${nameTitle}`);
-    const logo = document.querySelector(`img.CardLogo${nameTitle}`);
-    const title = document.querySelector(`p.CardTitle${nameTitle}`);
-
-    card?.addEventListener("mouseenter", function () {
-        // Acciones a realizar cuando el cursor entra en el elemento (evento onHover)
-        // console.log("El cursor ha entrado en el elemento.");
-        if (card){
-            card.style.border = "3px dashed white"
-        }
-        if (logo){
-            logo.style.filter = "blur(3px)";
-            logo.style.width = "40%";
-            logo.style.height = "40%";
-        }
-        if (title){
-            title.style.display = "block"
-        }
-         
-    });
-
-    card?.addEventListener("mouseleave", function () {
-        // Acciones a realizar cuando el cursor entra en el elemento (evento onHover)
-        // console.log("El cursor ha salido en el elemento.");
-        if (card){
-            card.style.border = "3px dashed rgba(245, 222, 179, 0)"
-        }
-        if (logo){
-            logo.style.filter = "blur(0px)";
-            logo.style.width = "90%";
-            logo.style.height = "90%";
-
-        }
-        if (title){
-            title.style.display = "none"
-        }
-         
-    });
+card?.addEventListener("mouseleave", function () {
+    // Acciones a realizar cuando el cursor entra en el elemento (evento onHover)
+    // console.log("El cursor ha salido en el elemento.");
+    if (card) {
+        card.style.border = "3px dashed rgba(245, 222, 179, 0)";
+    }
+    if (logo) {
+        logo.style.filter = "blur(0px)";
+        logo.style.width = "90%";
+        logo.style.height = "90%";
+    }
+    if (title) {
+        title.style.display = "none";
+    }
+});
     // console.log(card);
 </script>
 
@@ -74,17 +66,54 @@ const nameTitle = title
     img {
         width: 90%;
         height: 90%;
-         
     }
-     
-    
-    p { 
+
+    p {
         font-size: 24px;
         display: none;
         color: aliceblue;
         text-align: center;
         position: relative;
         margin: 0;
-         
+    }
+
+    @media screen and (max-width: 1024px) {
+        article {
+            width: 90px;
+            height: 90px;
+        }
+        p {
+            font-size: 20px;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        article {
+            width: 70px;
+            height: 70px;
+            border-radius: 10px;
+        }
+        p {
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (max-width: 425px) {
+        article {
+            width: 60px;
+            height: 60px;
+            border-radius: 10px;
+        }p {
+            font-size: 14px;
+        }
+    }
+    @media screen and (max-width: 320px) {
+        article {
+            width: 50px;
+            height: 50px;
+            border-radius: 10px;
+        }p {
+            font-size: 12px;
+        }
     }
 </style>
