--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Contact from '../sections/Contact.astro';
 
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="JS Portfolio">
 	<main>
 		<Hero/>
 		<Navbar/>
