--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,24 +1,17 @@
 ---
 import Navbar from "./Navbar.astro";
 import Footer from "./Footer.astro";
+import BaseHead from "./BaseHead.astro";
 
-export interface Props {
-	title: string;
-}
+const {title} = Astro.props;
+ 
 
-const { title } = Astro.props;
+ 
 ---
 
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
+<html lang="es">
+	<BaseHead title={title} description="Frontend Developer Portfolio"/>
 	<body>
 		<!-- <Navbar/> -->
 		<slot />
