--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -42,6 +42,7 @@ import background from "../assets/HeroBackground.jpg";
     p {
         font-size: 20px;
         margin: 10px 0 20px 0;
+        font-weight: 600;
     }
     .text-gradient {
         background-image: var(--accent-gradient);
@@ -51,15 +52,50 @@ import background from "../assets/HeroBackground.jpg";
         background-position: 0%;
     }
 
-    @media screen and (max-width: 1280px) {
-
+    @media screen and (max-width: 1024px) {
+        .title {
+            width: 60%;
+        }
     }
 
-    @media screen and (max-width: 800px) {
-
+    @media screen and (max-width: 768px) {
+        .title {
+            width: 80%;
+        }
     }
 
-    @media screen and (max-width: 480px) {
-        
+    @media screen and (max-width: 425px) {
+        .title {
+            width: 80%;
+            border-radius: 20px;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 1.6rem;
+            margin: 20px 0 10px 0;
+            color: aliceblue;
+        }
+        p {
+            font-size: 18px;
+            margin: 10px 0 20px 0;
+            padding: 0 20px;
+            text-align: center;
+            font-weight: 500;
+        }
+    }
+    @media screen and (max-width: 320px) {
+        .title {
+            width: 80%;
+            border-radius: 20px;
+            padding: 10px;
+        }
+        h1 {
+            font-size: 22px;
+            
+        }
+        p {
+            font-size: 16px;
+           
+        }
     }
 </style>
