--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -4,33 +4,6 @@ import quimikal from "../assets/imgProjects/p_quimikal.jpg";
 import bimcapacitacion from "../assets/imgProjects/p_bimcapacitacion.jpg";
 import discountsCitys from "../assets/imgProjects/p_discountscitys.jpg";
 import caretCorp from "../assets/imgProjects/p_sample_form.jpg";
-
-const latestProjects = [
-    {
-        title: "Quimikal Academy",
-        image: quimikal,
-        stack: ["html", "css"],
-        lang: "Ingles/English",
-    },
-    {
-        title: "BIMCapacitacion",
-        image: bimcapacitacion,
-        stack: ["html", "css"],
-        lang: "Ingles/English",
-    },
-    {
-        title: "Discounts Citys Sub",
-        image: discountsCitys,
-        stack: ["html", "css"],
-        lang: "Ingles/English",
-    },
-    {
-        title: "Caret Contact Form",
-        image: caretCorp,
-        stack: ["html", "css"],
-        lang: "Ingles/English",
-    },
-];
 ---
 
 <section id="Projects">
@@ -43,27 +16,55 @@ const latestProjects = [
             <h3>React projects...</h3>
             <Sliders type="react" client:visible />
         </div>
-
+        <div class="ProjectSlider">
+            <h3>React projects...</h3>
+            <Sliders type="react" client:visible />
+        </div>
         <!-- <div class="ProjectSlider">
             <h3>DevTo Posts...</h3>
             <Sliders/>
         </div> -->
     </div>
-
-    
-    
 </section>
 
 <style>
     section {
-        height: 100vh;
+        height: 100%;
         width: 100vw;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
     .ProjectWrapper {
-        width: 60%;
-        margin: 0 auto;
+        width: 70%;
+        height: 100%;
+        margin: 40px auto;
     }
     h3 {
         font-size: 40px;
+        margin: 40px 0 10px 0;
+    }
+
+    @media screen and (max-width: 1024px) {
+    }
+
+    @media screen and (max-width: 768px) {
+        h3 {
+            font-size: 30px;
+            margin: 30px 0 10px 0;
+        }
+    }
+
+    @media screen and (max-width: 425px) {
+        h3 {
+            font-size: 24px;
+            margin: 25px 0 10px 0;
+        }
+        .ProjectWrapper {
+            width: 85%;
+        }
+    }
+    @media screen and (max-width: 320px) {
     }
 </style>
